# zed-livelink

./: .gitignore  BuildZEDLinux.xml  README.md  ZEDLiveLinkConfig.json
Source/: ZEDLiveLink.Build.cs  ZEDLiveLink.Target.cs
Source/Private/: ZEDCamera.cpp  main.cpp
Source/Public/: Utils.h  ZEDCamera.h  ZEDStructs.h
UnrealProject/: README.md  ZEDUnrealLiveLink.uproject
UnrealProject/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
UnrealProject/Content/: Anim_livelink_granny.uasset  Anim_livelink_xbot.uasset  Anim_livelink_ybot.uasset  Avatar_livelink.uasset  CameraMirrorEffect.uasset  Manny_livelink.uasset  MixamoRemap.uasset
UnrealProject/Source/: ZEDUnrealLiveLink.Target.cs  ZEDUnrealLiveLinkEditor.Target.cs
ZEDLiveLink/: ZEDLiveLink.uplugin
ZEDLiveLink/Content/: LiveLinkMap.umap
sender-mono/: CMakeLists.txt  ZEDLiveLinkConfig.json
sender-mono/include/: GLViewer.hpp  Util.h
sender-mono/src/: GLViewer.cpp  PracticalSocket.cpp  main.cpp
sender-multi-camera/: CMakeLists.txt  ZEDFusionLiveLinkConfig.json
sender-multi-camera/include/: GLViewer.hpp  PracticalSocket.h  SenderRunner.hpp  Util.h
sender-multi-camera/src/: GLViewer.cpp  PracticalSocket.cpp  SenderRunner.cpp  main.cpp
zed-livelink-fusion/: BuildZEDLinux.xml  README.md
zed-livelink-fusion/Source/: ZEDLiveLinkFusion.Build.cs  (+1 more)
zed-livelink-mono/: BuildZEDLinux.xml  README.md  ZEDLiveLinkConfig.json
zed-opencv/: CMakeLists.txt
zed-opencv/include/: aruco.hpp  aruco_detector.hpp  interface.hpp
zed-opencv/src/: aruco_detector.cpp  interface.cpp
(+330 files in other folders)
